--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=pgAdmin
 
 mybatis.mapper-locations=classpath*:/mapper/*.xml
