--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=postgres
 spring.datasource.password=pgAdmin
 
 mybatis.mapper-locations=classpath*:/mapper/*.xml
+
+spring.servlet.multipart.max-file-size = 100MB
+server.tomcat.max-swallow-size = 50MB
