--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
-spring.datasource.password=pgAdmin
+spring.datasource.password=postgres
 
 mybatis.mapper-locations=classpath*:/mapper/*.xml
 
 spring.servlet.multipart.max-file-size = 100MB
 server.tomcat.max-swallow-size = 50MB
+
