--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
-spring.datasource.password=pgAdmin
+spring.datasource.password=postgres
 
 mybatis.mapper-locations=classpath*:/mapper/*.xml
 
