--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=pgAdmin
 
 mybatis.mapper-locations=classpath*:/mapper/*.xml
 
-spring.servlet.multipart.max-file-size = 100MB
-server.tomcat.max-swallow-size = 50MB
+spring.servlet.multipart.max-file-size = 1000MB
+spring.servlet.multipart.max-request-size=1000MB
+server.tomcat.max-swallow-size = 500MB
 
